--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sivadiClasses</groupId>
-	<artifactId>DogsManagementSystem</artifactId>
+	<artifactId>DogsManagaementSystem</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>DogsManagementSystem</name>
+	<name>DogsManagaementSystem</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
